==> zephyrproject-rtos/zephyr/drivers/rtc/rtc_stm32.c <==
#define DT_DRV_COMPAT st_stm32_rtc
#include <errno.h>
#include <zephyr/device.h>
#include <zephyr/kernel.h>
#include <zephyr/init.h>
#include <zephyr/devicetree.h>
#include <zephyr/spinlock.h>
#include <zephyr/drivers/rtc.h>
#include <zephyr/drivers/clock_control/stm32_clock_control.h>
#include <zephyr/drivers/clock_control.h>
#include <zephyr/sys/util.h>
#include <soc.h>
#include <stm32_bitops.h>
#include <stm32_ll_cortex.h>
#include <stm32_ll_pwr.h>
#include <stm32_ll_rcc.h>
#include <stm32_ll_rtc.h>
#include <zephyr/drivers/interrupt_controller/intc_exti_stm32.h>
#include <zephyr/logging/log.h>
#include <zephyr/irq.h>
#include <stm32_backup_domain.h>
#include <stm32_hsem.h>
#include <stdbool.h>
#include "rtc_utils.h"
#include "rtc_stm32.h"
#define HW_SUBSECOND_SUPPORT 0
#define HW_SUBSECOND_SUPPORT 1
#define RTC_YEAR_REF 2000
#define TM_YEAR_REF 1900
#define PPB_TO_NB_PULSES(ppb) DIV_ROUND_CLOSEST((ppb) * 2048, 1953125)
#define NB_PULSES_TO_PPB(pulses) DIV_ROUND_CLOSEST((pulses) * 1953125, 2048)
#define MAX_CALP (512)
#define MAX_CALM (511)
#define MAX_PPB NB_PULSES_TO_PPB(MAX_CALP)
#define MIN_PPB -NB_PULSES_TO_PPB(MAX_CALM)
#define RTC_TIMEOUT 1000
#define RTC_STM32_ALARMS_COUNT	DT_INST_PROP(0, alarms_count)
#define RTC_STM32_ALRM_A	0U
#define RTC_STM32_ALRM_B	1U
#define RTC_STM32_SUPPORTED_ALARM_FIELDS				\
	(RTC_ALARM_TIME_MASK_SECOND | RTC_ALARM_TIME_MASK_MINUTE	\
	| RTC_ALARM_TIME_MASK_HOUR | RTC_ALARM_TIME_MASK_WEEKDAY	\
	| RTC_ALARM_TIME_MASK_MONTHDAY)

void rtc_stm32_isr(const struct device *dev)
{
	struct rtc_stm32_data *data = dev->data;
	struct rtc_stm32_alrm *p_rtc_alrm;
	int id = 0;

	for (id = 0; id < RTC_STM32_ALARMS_COUNT; id++) {
		if (rtc_stm32_is_active_alarm(RTC, (uint16_t)id) != 0) {
			stm32_backup_domain_enable_access();
			LL_RTC_DisableWriteProtection(RTC);
			rtc_stm32_clear_alarm_flag(RTC, (uint16_t)id);
			LL_RTC_EnableWriteProtection(RTC);
			stm32_backup_domain_disable_access();

			if (id == RTC_STM32_ALRM_A) {
				p_rtc_alrm = &(data->rtc_alrm_a);
			} else {
				p_rtc_alrm = &(data->rtc_alrm_b);
			}

			p_rtc_alrm->is_pending = true;

			if (p_rtc_alrm->user_callback != NULL) {
				p_rtc_alrm->user_callback(dev, (uint16_t)id, p_rtc_alrm->user_data);
			}
		}
	}

	exti_clear_rtc_alarm_flag(RTC_STM32_EXTI_LINE_NUM);
}

static int rtc_stm32_init(const struct device *dev)
{
	const struct device *const clk = DEVICE_DT_GET(STM32_CLOCK_CONTROL_NODE);
	const struct rtc_stm32_config *cfg = dev->config;
	__maybe_unused struct rtc_stm32_data *data = dev->data;

	int err = 0;

	if (!device_is_ready(clk)) {
		LOG_ERR("clock control device not ready");
		return -ENODEV;
	}

	/* Enable RTC bus clock */
	if (clock_control_on(clk, (clock_control_subsys_t)&cfg->pclken[0]) != 0) {
		LOG_ERR("clock op failed\n");
		return -EIO;
	}

#if defined(CONFIG_SOC_SERIES_STM32WB0X)
	/**
	 * The STM32WB0 series has no bit for clock gating of RTC's APB
	 * interface. On the other hand, the RTCEN bit that would control
	 * whether the RTC IP is clock gated or not exists, and has been
	 * placed in APB0ENR. The call to clock_control_on() that just
	 * completed should have set this bit to 1.
	 *
	 * However, according to RefMan, the software must wait two slow
	 * clock cycles before the IP is actually usable, due to clock
	 * resynchronization delays. Sadly, there is no hardware register
	 * we can poll to wait until RTC is ready...
	 *
	 * In worst case scenario of 24 kHz LSI, we have to wait for:
	 *		tREADY = (2 cycles / 24'000 Hz) ≅ 84µs
	 *
	 * Spin until that much time has elapsed, and RTC should be up.
	 *
	 * N.B.: we can't use k_busy_wait because it uses the SysTick
	 * as time base, but SysTick is initialized after the RTC...
	 */
	const uint32_t cycles_to_waste =
		84 * (STM32_HCLK_FREQUENCY / USEC_PER_SEC);
	volatile uint32_t i = cycles_to_waste;

	while (--i > 0) {
		/* Do nothing - loop itself burns enough cycles */
	}
#endif /* CONFIG_SOC_SERIES_STM32WB0X */

	stm32_backup_domain_enable_access();

#if DT_INST_CLOCKS_CELL_BY_IDX(0, 1, bus) == STM32_SRC_HSE
	/* Must be configured before selecting the RTC clock source */
	LL_RCC_SetRTC_HSEPrescaler(cfg->hse_prescaler);
#endif
	/* Enable RTC clock source */
	if (cfg->pclken[1].enr != NO_SEL) {
		err = clock_control_configure(clk, (clock_control_subsys_t)&cfg->pclken[1], NULL);

		if (err < 0) {
			stm32_backup_domain_disable_access();
			LOG_ERR("clock configure failed\n");
			return -EIO;
		}
	}

/*
 * On certain series, there is no bit in BCDR register to enable RTC;
 * a single bit in RCC controls both the RTC and bus interface. On
 * such series, the LL_RCC_EnableRTC function is usually not provided
 * by the STM32Cube package, but it's fine to skip calling it since
 * the RTC is already accessible thanks to clock_control_on() above.
 */
#if !defined(CONFIG_SOC_SERIES_STM32WBAX) && !defined(CONFIG_SOC_SERIES_STM32WB0X)
	z_stm32_hsem_lock(CFG_HW_RCC_SEMID, HSEM_LOCK_DEFAULT_RETRY);

#ifdef CONFIG_SOC_SERIES_STM32U3X
	/* STM32U3 series uses LL_RCC_RTC_ClockEnable instead of LL_RCC_EnableRTC */
	LL_RCC_RTC_ClockEnable();
#else
	LL_RCC_EnableRTC();
#endif /* CONFIG_SOC_SERIES_STM32U3X */

	z_stm32_hsem_unlock(CFG_HW_RCC_SEMID);
#endif /* !STM32WBAX && !STM32WB0X */

	err = rtc_stm32_configure(dev);

	stm32_backup_domain_disable_access();

#ifdef STM32_RTC_ALARM_ENABLED
	rtc_stm32_irq_config(dev);

	exti_enable_rtc_alarm_it(RTC_STM32_EXTI_LINE_NUM);

	K_SPINLOCK(&data->lock) {
		memset(&(data->rtc_alrm_a), 0, sizeof(struct rtc_stm32_alrm));
		memset(&(data->rtc_alrm_b), 0, sizeof(struct rtc_stm32_alrm));
	}
#endif /* CONFIG_RTC_ALARM */

	return err;
}
